@@ -1,11 +1,0 @@
-[python-2.4]
-command +=
-    ${python-2.4-build:executable} ${buildout:python-buildout-root}/distribute_setup.py -U distribute
-
-[python-2.5]
-command +=
-    ${python-2.5-build:executable} ${buildout:python-buildout-root}/distribute_setup.py -U distribute
-
-[python-2.6]
-command +=
-    ${python-2.6-build:executable} ${buildout:python-buildout-root}/distribute_setup.py -U distribute
