@@ -19,20 +19,18 @@ extra_options =
     --prefix=${opt:location}
 
 [python-2.4-virtualenv]
-recipe = zc.recipe.egg
-python = python-2.4-build
-eggs =
-    virtualenv
-scripts =
-    virtualenv=virtualenv-2.4
+recipe = gocept.download
+url = http://dist.jarn.com/public/virtualenv-distribute-1.3.4dev.zip
+md5sum = 15023d9f14390425b7000e699ee2f87a
 
 [python-2.4]
 recipe = plone.recipe.command
 location = ${buildout:directory}/python-2.4
-executable = ${python-2.4-build:executable}
+executable = ${:location}/bin/python
 command =
-    ${buildout:directory}/bin/virtualenv-2.4 ${:location}
-    ${:location}/bin/easy_install -U collective.dist
+    ${opt:location}/bin/python2.4 ${python-2.4-virtualenv:location}/virtualenv.py ${:location}
+    rm -rf ${:location}/lib/python2.4/site-packages/distribute*
+    ${:location}/bin/python2.4 ${python-2.4-virtualenv:location}/support-files/distribute_setup.py
 update-command = ${:command}
 
 [python-2.4-PIL]
@@ -47,7 +45,7 @@ update-command = ${:command}
 
 [python-2.4-buildout]
 recipe = zc.recipe.egg
-python = python-2.4-build
+python = python-2.4
 eggs =
     zc.buildout
 scripts =
