@@ -12,25 +12,25 @@ python25-parts =
 recipe = zc.recipe.cmmi
 executable = ${opt:location}/bin/python2.5
 url = http://www.python.org/ftp/python/2.5.4/Python-2.5.4.tar.bz2
+macosx-opt =
 extra_options =
+    ${:macosx-opt}
     --disable-tk
     --prefix=${opt:location}
 
 [python-2.5-virtualenv]
-recipe = zc.recipe.egg
-python = python-2.5-build
-eggs =
-    virtualenv
-scripts =
-    virtualenv=virtualenv-2.5
+recipe = gocept.download
+url = http://dist.jarn.com/public/virtualenv-distribute-1.3.4dev.zip
+md5sum = 15023d9f14390425b7000e699ee2f87a
 
 [python-2.5]
 recipe = plone.recipe.command
 location = ${buildout:directory}/python-2.5
-executable = ${python-2.5-build:executable}
+executable = ${:location}/bin/python
 command =
-    ${buildout:directory}/bin/virtualenv-2.5 ${:location}
-    ${:location}/bin/easy_install -U collective.dist
+    ${opt:location}/bin/python2.5 ${python-2.5-virtualenv:location}/virtualenv.py ${:location}
+    rm -rf ${:location}/lib/python2.5/site-packages/distribute*
+    ${:location}/bin/python2.5 ${python-2.5-virtualenv:location}/support-files/distribute_setup.py
 update-command = ${:command}
 
 [python-2.5-PIL]
@@ -45,7 +45,7 @@ update-command = ${:command}
 
 [python-2.5-buildout]
 recipe = zc.recipe.egg
-python = python-2.5-build
+python = python-2.5
 eggs =
     zc.buildout
 scripts =
