@@ -12,24 +12,25 @@ python26-parts =
 recipe = zc.recipe.cmmi
 executable = ${opt:location}/bin/python2.6
 url = http://www.python.org/ftp/python/2.6.2/Python-2.6.2.tar.bz2
+macosx-opt =
 extra_options =
+    ${:macosx-opt}
     --disable-tk
     --prefix=${opt:location}
 
 [python-2.6-virtualenv]
-recipe = zc.recipe.egg
-python = python-2.6-build
-eggs =
-    virtualenv
-scripts =
-    virtualenv=virtualenv-2.6
+recipe = gocept.download
+url = http://dist.jarn.com/public/virtualenv-distribute-1.3.4dev.zip
+md5sum = 15023d9f14390425b7000e699ee2f87a
 
 [python-2.6]
 recipe = plone.recipe.command
 location = ${buildout:directory}/python-2.6
-executable = ${python-2.6-build:executable}
+executable = ${:location}/bin/python
 command =
-    ${buildout:directory}/bin/virtualenv-2.6 ${:location}
+    ${opt:location}/bin/python2.6 ${python-2.6-virtualenv:location}/virtualenv.py ${:location}
+    rm -rf ${:location}/lib/python2.6/site-packages/distribute*
+    ${:location}/bin/python2.6 ${python-2.6-virtualenv:location}/support-files/distribute_setup.py
 update-command = ${:command}
 
 [python-2.6-PIL]
@@ -44,7 +45,7 @@ update-command = ${:command}
 
 [python-2.6-buildout]
 recipe = zc.recipe.egg
-python = python-2.6-build
+python = python-2.6
 eggs =
     zc.buildout
 scripts =
