@@ -2,6 +2,13 @@ Changes
 =======
 
 
+2009-09-08
+----------
+
+* Use 'distribute' by default. See UPGRADE.txt.
+  [fschulze]
+
+
 2009-09-05
 ----------
 
@@ -35,6 +42,7 @@ Changes
 
 * By depending on zc.buildout >= 1.4.0 the amount of repition in the python
   parts was vastly reduced and makes the configuration more easily readable.
+  See UPGRADE.txt.
   [fschulze]
 
 * Fixed path to patch for Python 2.5 on Snow Leopard.
